--- a/ROS/catkin_ws/src/ros_learn/CMakeLists.txt
+++ b/ROS/catkin_ws/src/ros_learn/CMakeLists.txt
@@ -102,14 +102,18 @@ link_directories(
 # add_executable(ros_rtsp src/ros_rtsp.cpp)
 # target_link_libraries(ros_rtsp ${catkin_LIBRARIES}) 
 
-add_executable(test_ros_time src/test_ros_time.cpp)
-target_link_libraries(test_ros_time ${catkin_LIBRARIES}) 
+# add_executable(test_ros_time src/test_ros_time.cpp)
+# target_link_libraries(test_ros_time ${catkin_LIBRARIES}) 
 
 add_executable(rtsp_sub src/rtsp_sub.cpp)
 target_link_libraries(rtsp_sub ${catkin_LIBRARIES} ${OpenCV_LIBS}) 
 
 add_executable(rtsp_pub src/rtsp_pub.cpp)
 target_link_libraries(rtsp_pub ${catkin_LIBRARIES} ${OpenCV_LIBS}) 
+
+add_executable(test_siyuanshu src/test_siyuanshu.cpp)
+target_link_libraries(test_siyuanshu ${catkin_LIBRARIES} ${OpenCV_LIBS}) 
+
 
 
 # target_link_libraries(web_sub ${catkin_LIBRARIES} ${OpenCV_LIBS}) 
